Contain all updated info; waiting for a few more

--- a/bid.tex
+++ b/bid.tex
@@ -14,7 +14,7 @@
 \begin{center}
 \includegraphics{bid.png}\\
 \Large{Berkeley Institute of Design}\\
-\Large{http://bid.berkeley.edu}\\
+\large{http://bid.berkeley.edu}\\
 \end{center}
 The Berkeley Institute of Design (BiD) is a research group that fosters a new and deeply interdisciplinary approach to design for the 21st century.  We are an active research group with a focus that spans human-computer interaction (HCI), mechanical design, education, architecture, and art practice.\\
 
@@ -46,7 +46,13 @@ Kimiko Ryokai, School of Information\\
 \name{Peggy Chi}
 \email{peggychi@cs.berkeley.edu}
 \website{http://www.cs.berkeley.edu/$\sim$peggychi/}
-When attempting to accomplish unfamiliar tasks, people often search for online tutorials to follow instructions. We design video-based recording, editing, and playback tools optimized for creating and consuming interactive tutorials from author demonstrations. Our approaches acquire videos and high-level events that are important to a learner and automatically generate novel instructional formats. A series of systems to support this vision includes: MixT [UIST'12], DemoCut [UIST'13], Kinectograph [CHI'13], DemoWiz[CHI'14], and an ongoing project for authoring motion illustrations.
+When attempting to accomplish unfamiliar tasks, people often search for online tutorials to follow instructions. We design video-based recording, editing, and playback tools optimized for creating and consuming interactive tutorials from author demonstrations. Our approaches automatically generate novel instructional formats from videos and high-level events that are important to a learner. A series of systems to support this vision includes: MixT [UIST'12], DemoCut [UIST'13], Kinectograph [CHI'13], DemoWiz [CHI'14], and an ongoing project for authoring motion illustrations.
+
+\subsection{Design and Control of a Twelve-Bar Tensegrity Robot}
+\name{Mallory Daly}
+\email{mallorycdaly@berkeley.edu}
+\website{http://mallorycdaly.com}
+Tensegrity structures are inherently compliant and lightweight, making them an exciting soft robotics platform. The structures consist of a number of rods suspended in a network of cables in tension. Prior work has successfully designed and tested a six-bar tensegrity robot, but it has revealed limitations to the six-bar structure. My research seeks to realize a twelve-bar tensegrity robot to achieve higher actuation efficiency and impact robustness.
 
 \subsection{Resistance as a Resource for Design}
 \name{Laura Devendorf}
@@ -66,13 +72,13 @@ My research blends computer science, art history, and science and technology stu
 \website{http://www.eecs.berkeley.edu/$\sim$shiry}
 Humans are highly evolved beings with computational capabilities that modern algorithms can rarely achieve. This is particularly true in the area of complex learning and visual perception. I am interested in modeling human performance in different areas and designing technology inspired by these abilities.
 
-\subsection{Synthesizing explanations of online example code}
+\subsection{Synthesizing Explanations of Online Example Code}
 \name{Andrew Head}
 \email{andrewhead@eecs.berkeley.edu}
 \website{http://andrewhead.info}
 Programmers use the web to learn and clarify details as they write code. But online information can be fragmented, unreliable, incomplete, or written for readers with a different background. I develop systems that synthesize explanations for under-explained code on the fly.  I explore what makes effective components of explanations, and techniques for building explanation generators.
 
-\subsection{Interactive machine learning}
+\subsection{Interactive Machine Learning}
 \name{Biye Jiang}
 \email{bjiang@cs.berkeley.edu}
 \website{http://byeah.github.io/}
@@ -84,7 +90,7 @@ I am interested in building toolkits for modern data scientists who will usually
 \website{http://best.berkeley.edu/best-research/design-roadmap/}
 While product and technology roadmaps have been well-formalized in terms of their structures, methodologies, and frameworks, design roadmaps have not been explicitly explored nor studied from either an academic or industry practice standpoint. Strategies that revolve around the holistic experience of products are more likely to be successful in today’s market. As first step, we develop a design driven roadmapping process as a new way of preparing future product concepts and define elements and steps.
 
-\subsection{Design thinking for social impact}
+\subsection{Design Thinking for Social Impact}
 \name{Julia Kramer}
 \email{j.kramer@berkeley.edu}
 I conduct research at the intersection of design thinking and global development. I investigate the design methods and tools that designers use when working on social impact projects, and I seek to understand how these methods are related to the context in which the designers are working. I also explore design theory and methodology more generally through my work on theDesignExchange (www.thedesignexchange.org), an online repository and ontology of design methods useful for designers across a variety of disciplines.
@@ -99,7 +105,7 @@ Design tools for digital fabrication have opened a wide array of opportunities f
 \subsection{ESP (Example-based Sensor Predictions)}
 \name{David A. Mellis}
 \email{mellis@berkeley.edu}
-\website{http://web.media.mit.edu/~mellis/}
+\website{http://web.media.mit.edu/$\sim$mellis/}
 This project helps novices make sophisticated use of sensors in interactive projects through the application of machine learning. With our system, experts author example code for particular applications. Our system generates a GUI which allows end-users to supply their own training data, calibrate their sensors, and tune the machine learning algorithms for incorporation in their own projects. This example-centric approach allows to provide a customized, usable interface across a wide range of real-time sensing applications.
 % (w/ Ben Zhang, Audrey Leung, and Bjoern Hartmann)
 
@@ -107,20 +113,17 @@ This project helps novices make sophisticated use of sensors in interactive proj
 \name{Mitar Milutinovi\'c}
 \email{mitar@tnode.net}
 \website{http://mitar.tnode.com}
-My research interests are e-democracy, deliberative democracy,
-collective intelligence, trust networks, group decision support systems,
-collaboration tools, peer-to-peer and distributed systems, wireless
-mesh/community networks, organic/self-healing technologies. Currently, I
-am working on a novel platform for enriching the experience of open
-access scholarly literature called PeerLibrary (http://peerlibrary.org/)
-and on a voting scheme which uses a social network between voters to
-find a better overall group decision.
+My past research has been into how to make developing web applications
+possible for non-programmers through visual and real-time programming.
+Recently I have been investigating how to make it easier for developers
+to make secure and privacy-preserving web applications without requiring
+them to be experts in computer security.
 
-\subsection{Actuated Tensegrity Structures for Dynamic Locomotion}
-\name{Andrew Sabelhaus}
+\subsection{Walking Robots with Flexible Tensegrity Spines}
+\name{Andrew P. Sabelhaus}
 \email{apsabelhaus@berkeley.edu}
-\website{http://tinyurl.com/TensegrityRobots}
-Combining the popular mechatronics paradigms of soft robotics and bio-inspiration, actuated Tensegrity structures offer opportunities for unique movement and locomotion methods. Tensegrity robots are comprised of purely tensile and compressive elements (cables and rods) that change shape when their tensions are adjusted. Based on prior work that used machine learning techniques to develop control laws for such actuation, this research seeks to create a physical realization of a Tensegrity robot.
+\website{http://www.apsabelhaus.com}
+This research seeks to design and control a walking four-legged robot with a flexible tension-network ('tensegrity') spine. By designing a robot with a spine between its shoulders and hips, and using a tensegrity system for that spine, the whole structure can be made lightweight and flexible. A prototype of this robot has been constructed, tested, and controlled in simulation.
 
 \subsection{Fabbed To Sense: Co-Design of Geometry and Sensing Algorithms for Interactive Objects}
 \name{Valkyrie Savage}
@@ -128,11 +131,22 @@ Combining the popular mechatronics paradigms of soft robotics and bio-inspiratio
 \website{http://valkyriesavage.com}
 Digital fabrication tools like 3D printers and laser cutters are often used in the process of prototyping interactive objects. However, they are often used to make static parts, like cases or mounts. We have developed a framework linking pre-fabrication digital geometry and knowledge of fabricated material properties to desired sensing techniques; thus we can leverage 3D printed plastics or vinyl-cut foils directly as senseable elements. We call this ``Fabbing to Sense'', and over the course of my research we have developed three instances of this technique: Midas [UIST12], Lamello [CHI15], and Sauron [UIST13].
 
-\subsection{Identify misunderstanding in students and delivering guidance to fix them}
+\subsection{Identify Misunderstanding in Students and Delivering Guidance to Fix Them}
 \name{Kristin Stephens-Martinez}
 \email{ksteph@cs.berkeley.edu}
 \website{http://www.cs.berkeley.edu/$\sim$ksteph/}
 We propose a model that uses student incorrect constructed responses to identify conceptual misunderstandings. We do this by labeling the popular wrong answers with the misunderstandings they indicate, then use co-occurrence to predict other answers' labels. This approach leverages a small amount of human effort to seed an automated procedure. Our approach involves much less effort than inspecting all answers and substantially outperforms an uninformed baseline. Our next steps involve using the misunderstanding model to deliver guidance messages to students in hopes to fix their misunderstandings.
+
+\subsection{(missing title)}
+\name{Rundong Tian}
+\email{rutian@berkeley.edu}
+\website{http://rundongtian.com}
+In 2012, air pollution in both cities and rural areas was estimated to have caused 3.7 million premature deaths. The primary pollutant was small airborne particulate matter of 10 microns or less in diameter, which led to the development of cardiovascular and respiratory diseases. In response, we developed MyPart, the first personal, portable, and accurate particle sensor with a bill of materials under \$50. We demonstrate how MyPart offers substantial enhancements over most existing air particle sensors by improving accessibility, flexibility, portability, and accuracy.
+
+\subsection{Investigation of Impact Characteristics of Tensegrity Structures}
+\name{Edward Zhu}
+\email{edward.zhu@berkeley.edu}
+Due to their unique compliance, tensegrity structures are capable of absorbing large amounts of energy upon impact. This allows for robustness in the deployment process during planetary exploration. My research will further investigate the behavior of tensegrity structures in different impact scenarios in order to improve its survivability in different landing situations.
 
 \vspace{12pt}
 Latest update: \today
